--- a/hw-2/style.css
+++ b/hw-2/style.css
@@ -1,3 +1,5 @@
+
+
 #header {
 	display: flex;
 	align-items: stretch;
@@ -45,6 +47,8 @@
 	display: flex;
 
 }
+
+
 #menu {
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
@@ -84,49 +88,38 @@
 
 
 
-#information div {
-
-	display: inline;
-	font-family: Arial;
-	font-weight: bold;
-	font-size: large;
-
-		
-}
-
-#information div a{
-	margin-top: 50px;
-	margin-left: 100px;
-		
-} 
-
-
- 
-  td .pole {
-
+  div.lable {
 	margin-bottom: 20px;
-	margin-right: 40px;
-	width: 100px;
+	margin-right: 30px;
+	width: 120px;
+
 
  }
 
-tr {
+.labn {
+	margin-top: 20px;
+	margin-bottom: 16px;
+	display: -webkit-inline-box
+}
+
+ .lable {
+ 	text-align: right;
+ 	font-family: Arial;
+	font-weight: bold;
+ }
+
+  div.string {
+  	display: -webkit-inline-box;
 	height: 50px;
 }
 
-.pole {
-	text-align: right;
- 	font-family: Arial;
-	font-weight: bold;
-}
-
- table {
+ div.editprofile {
  	margin-right: 100px;
  	margin-left: 50px;
  	margin-top: 30px;
  }
 
- table tr td input {
+ input {
  	margin-left: 30px;
  	border-style: solid;
  	border-radius: 5px;
@@ -136,7 +129,6 @@ tr {
 	height: 30px;
 
  }
-
 
 
 h3 {
@@ -156,11 +148,10 @@ p {
 	line-height: 0;
 }
 
-td img {
-	margin-left: 70px;
-}
+
 
 .sub  input{
+	margin-top: 30px;
 	margin-left: 30px;
 	background-color: white;
 	border-radius: 5px;
@@ -183,12 +174,8 @@ td img {
 
 select {
 	margin-left: 30px;
-	opacity: 1;
 }
 
-option:hover {
-opacity: 3;
-}
 
 option {
 	display: block;
@@ -197,6 +184,7 @@ option {
 
 
 .subl  input{
+	margin-top: 20px;
 	background-color: white;
 	color: blue;
 	font-family: Arial;
@@ -210,7 +198,7 @@ option {
 
 #footer {
 	margin-left: 200px;
-	margin-bottom: 40px;
+
 }
  #footer a {
 	text-decoration: none;
@@ -219,5 +207,69 @@ option {
 	color: navy;
 	font-weight: bold;
 	margin-right: 10px;
+	margin-bottom: 30px;
 }
 
+#blockprofile {
+	display: -webkit-inline-box;
+	margin-right: 300px;
+}
+
+.imgprof{
+	margin: 20px 30px 30px 300px;
+
+}
+
+.profinform {
+	display: -webkit-inline-box;
+	margin-top: 50px;
+
+
+}
+
+.maininf{
+	display: -webkit-inline-box;
+	margin-left: 20px;
+}
+
+.maininf div {
+	margin-right: 20px;
+}
+.public {
+	display: -webkit-inline-box;
+	margin-left: 50px;
+}
+
+span {
+	margin-right: 20px;
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+	
+	#menu{
+		margin-left: 100px;
+
+	}
+	#information {
+		margin-right: 100px;
+	}
+
+	#blockprofile{
+		margin-left: -100px;
+	}
+
+}
+ 
+ @media (min-width: 768px) and (max-width: 992px){
+ 	#menu {
+ 		margin-left: 0px;
+
+ 	}
+ 	#information {
+ 		margin-right: 0px;
+ 	}
+
+ 	#blockprofile{
+		margin-left: -200px;
+	}
+ }
